fixed article height on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -181,7 +181,7 @@ nav a:hover::after {
   flex-direction: column;
   justify-content: center;
   gap: 1.5ch;
-  height: 100vh;
+  height: 80vh;
   /* padding: 5vh 0; */
   /* max-width: 100vw; */
   /* place-items: center; */
@@ -428,6 +428,7 @@ article.skills {
     flex-direction: row;
     /* grid-auto-flow: column; */
     width: 90vw;
+    height: 100vh;
   }
 
   aside {
